--- a/package.json
+++ b/package.json
@@ -1,10 +1,14 @@
 {
   "author": "arsa24",
   "name": "baileys-boilerplate",
-  "version": "1.0.5",
+  "version": "1.0.6",
   "main": "./main.js",
   "type": "module",
-  "keywords": ["baileys", "baileys-boilerplate", "boirlerplate"],
+  "keywords": [
+    "baileys",
+    "baileys-boilerplate",
+    "boirlerplate"
+  ],
   "dependencies": {
     "chalk": "^5.4.1",
     "inquirer": "^12.3.0"
@@ -12,6 +16,11 @@
   "description": "Simple Baileys boilerplate",
   "bin": {
     "baileys-boilerplate": "./main.js"
+  },
+  "homepage": "https://github.com/arsa24/baileys-boilerplate",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/arsa24/baileys-boilerplate.git"
   },
   "license": "MIT"
 }
